# autoaim_detectors

armor_detectors/: CMakeLists.txt  package.xml
armor_detectors/include/: NetArmorDetector.hpp  TraditionalArmorDetector.hpp
armor_detectors/include/armor_detectors/: BaseArmorDetector.hpp  NetArmorDetector.hpp  TraditionalArmorDetector.hpp
armor_detectors/src/: NetArmorDetector.cpp  TraditionalArmorDetector.cpp
autoaim_detectors/: CMakeLists.txt  package.xml
detector_bring_up/: CMakeLists.txt  package.xml
detector_node/: CMakeLists.txt  package.xml
detector_node/include/detector_node/: DetectorNode.hpp
detector_node/src/: DetectorNode.cpp  detector_node_parameters.yaml
energy_detectors/: CMakeLists.txt  package.xml
energy_detectors/include/energy_detectors/: BaseEnergyDetector.hpp  TraditionalEnergyDetector.hpp
energy_detectors/src/: TraditionalEnergyDetector.cpp
net_armor_detector/: CMakeLists.txt  package.xml
net_detectors/: CMakeLists.txt  package.xml
net_detectors/include/net_detectors/: BaseNetDetector.hpp  NetDetectors.hpp  NetEnergyDetector.hpp
net_detectors/model/: yolox_1.onnx
net_detectors/src/: BaseNetDetector.cpp  NetDetectors.cpp
net_energy_detector/: CMakeLists.txt  package.xml
traditional_armor_detector/: CMakeLists.txt  package.xml
traditional_detectors/: CMakeLists.txt  package.xml
traditional_detectors/include/traditional_detectors/: BaseTraditionalDetector.hpp  TraditionalArmorDetector.hpp  TraditionalEnergyDetector.hpp
traditional_detectors/src/: TraditionalArmorDetector.cpp  TraditionalEnergyDetector.cpp
traditional_energy_detector/: CMakeLists.txt  package.xml
