<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detector_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1002984726@qq.com">jk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>generate_parameter_library</depend>
  <depend>cv_bridge</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>message_filter</depend>
  <depend>armor_detectors</depend>
  <depend>energy_detectors</depend>
  <depend>autoaim_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>image_transport</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
